Add program related 2D dict

--- a/Python_by_Example__Learning_to_Pro.ipynb
+++ b/Python_by_Example__Learning_to_Pro.ipynb
@@ -5311,6 +5311,525 @@
     "\n",
     "</div>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "219750b4-9ae2-4606-85bb-983042645861",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#0f172a; padding:20px; border-radius:12px; text-align:center;\">\n",
+    "    <h1 style=\"color:#38bdf8; margin-bottom:10px;\">Part 10</h1>\n",
+    "    <h2 style=\"color:yellow; font-weight:400;\"> 2D Lists and Dictionaries </h2>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6bca4cab-eca1-44cc-ae06-94c5a26537cc",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Medium</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>096.</strong> Create a simple 2D list (a list inside a list) exactly as shown in the question.\n",
+    "        Use standard Python indexing to store and access the values.\n",
+    "    </p>\n",
+    "            <img src=\"resources/96.png\" width=\"300px\" height=\"200px\" align='center' />\n",
+    "\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "11cc09aa-285c-4295-ac1a-d7dcc104b3f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value at column 1 and row 1 is 7\n",
+      "Value at column 0 and row 3 is 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = [\n",
+    "    [2, 5, 8],\n",
+    "    [3, 7, 4],\n",
+    "    [1, 6, 9],\n",
+    "    [4, 2, 0]\n",
+    "]\n",
+    "\n",
+    "print(f'Value at column 1 and row 1 is {arr[1][1]}\\nValue at column 0 and row 3 is {arr[3][0]}')\n",
+    "\n",
+    "# Quick Note: While indexing first value represent row and 2nd represent column"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05cdbe22-a37e-4220-9206-aa3a9c52bf97",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Medium</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>097.</strong> Using the 2D list from program 096, ask the user to enter a row number\n",
+    "        and a column number. Display the value stored at that position.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b1641ca7-7c75-47e8-981a-63dac523038f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 5, 8]\n",
+      "[3, 7, 4]\n",
+      "[1, 6, 9]\n",
+      "[4, 2, 0]\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter Row Number  2\n",
+      "Enter Column Number  2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value at row 2 and col 2 is 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for a in arr:\n",
+    "    print(a)\n",
+    "    \n",
+    "row = int(input(\"Enter Row Number \"))\n",
+    "col = int(input(\"Enter Column Number \"))\n",
+    "\n",
+    "print(f'Value at row {row} and col {col} is {arr[row][col]}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a3bf8d0-b2ab-4043-b43c-5a56c6295599",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Medium–Hard</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>098.</strong> Using the 2D list from program 096, ask the user which row they want to see\n",
+    "        and display that row. Ask them to enter a new value, add it to the end of the row,\n",
+    "        and then display the updated row.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d1057046-2b95-46ce-aafa-ebb70236f0e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Which Row You Want To See  2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 6, 9]\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter New Value  7\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 6, 9, 7]\n",
+      "New list look like\n",
+      "[[2, 5, 8], [3, 7, 4], [1, 6, 9, 7], [4, 2, 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "row = int(input(\"Which Row You Want To See \"))\n",
+    "\n",
+    "if row<=3:\n",
+    "    print(arr[row])\n",
+    "    val = int(input(\"Enter New Value \"))\n",
+    "    arr[row].append(val)\n",
+    "    print(arr[row])\n",
+    "\n",
+    "print(f'New list look like\\n{arr}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "938a49db-b1a6-4c7e-8387-36936bf8c340",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Hard</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>099.</strong> Ask the user which row they want to display and show that row.\n",
+    "        Then ask which column value they want to see and display it.\n",
+    "        Ask if they want to change the value.\n",
+    "        If yes, ask for a new value, update the data,\n",
+    "        and finally display the whole row again.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "39d5749b-3060-467f-95f2-0c44b814ca93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Which Row You Want To See  2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 6, 9, 7]\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Which Col Value You Want To See  2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Do you want to update value  y\n",
+      "Enter new value  12\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Row is now [1, 6, 12, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "row = int(input(\"Which Row You Want To See \"))\n",
+    "print(arr[row])\n",
+    "\n",
+    "col = int(input(\"Which Col Value You Want To See \"))\n",
+    "print(arr[row][col])\n",
+    "\n",
+    "boolean = input(\"Do you want to update value \")\n",
+    "if boolean == 'y':\n",
+    "    val = int(input(\"Enter new value \"))\n",
+    "    arr[row][col] = val\n",
+    "else:\n",
+    "    print(\"Ok, we display without change \")\n",
+    "\n",
+    "print(f'Row is now {arr[row]}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26a340fe-aff0-462f-9ab3-a240231deb10",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Medium–Hard</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>100.</strong> Create a 2D dictionary to store sales data.\n",
+    "        The dictionary should show how much each person has sold\n",
+    "        in different geographical regions.\n",
+    "    </p>\n",
+    "        <img src=\"resources/100.png\" width=\"300px\" height=\"200px\" align='center' />\n",
+    "\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b38433ca-2608-4b0e-91f8-33355941c02b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'N': 3904, 'S': 8645, 'E': 8821, 'W': 2451}\n"
+     ]
+    }
+   ],
+   "source": [
+    "sales = {\n",
+    "    'John':{\n",
+    "        'N':3056,\n",
+    "        'S':8463,\n",
+    "        'E':8441,\n",
+    "        'W':2694\n",
+    "    },\n",
+    "    'Tom':{\n",
+    "         'N':4832,\n",
+    "        'S':6786,\n",
+    "        'E':4737,\n",
+    "        'W':3612   \n",
+    "    },\n",
+    "    'Anne':{\n",
+    "        'N':5239,\n",
+    "        'S':4802,\n",
+    "        'E':5820,\n",
+    "        'W':1859\n",
+    "    },\n",
+    "    'Fiona':{\n",
+    "        'N':3904,\n",
+    "        'S':8645,\n",
+    "        'E':8821,\n",
+    "        'W':2451\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "print(sales['Fiona'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3455c680-8ec0-4b8a-97de-3d392e8d98ec",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Hard</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>101.</strong> Using the dictionary from program 100, ask the user for a person’s name\n",
+    "        and a region, then display the sales figure.\n",
+    "        Ask which name and region they want to change and allow them to update the value.\n",
+    "        Finally, display all the regional sales for that person.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7656d76e-9c03-4cee-8628-0014316c9597",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter Name of Person  Tom\n",
+      "Enter Region for Sale  N\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4832\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Which Person Sale You Want to Change  Fiona\n",
+      "Which Region Sale You Want to Change  S\n",
+      "Enter new sale value  1234\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated\n",
+      "Sale of Fiona is {'N': 3904, 'S': 1234, 'E': 8821, 'W': 2451}\n"
+     ]
+    }
+   ],
+   "source": [
+    "person = input(\"Enter Name of Person \")\n",
+    "region = input(\"Enter Region for Sale \")\n",
+    "print(sales[person][region])\n",
+    "\n",
+    "person = input(\"Which Person Sale You Want to Change \")\n",
+    "region = input(\"Which Region Sale You Want to Change \")\n",
+    "\n",
+    "try:\n",
+    "    val = int(input(\"Enter new sale value \"))\n",
+    "    sales[person][region] = val\n",
+    "    print('Updated')\n",
+    "except:\n",
+    "    pass\n",
+    "\n",
+    "print(f'Sale of {person} is {sales[person]}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "714cdd34-191e-45af-97a7-9b7a1ec4931e",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Medium</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>102.</strong> Ask the user to enter the name, age, and shoe size of four people.\n",
+    "        Ask for the name of one person and display their age and shoe size.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "7c713044-852d-4451-83d7-efaa06ba51dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter Person Name  Mansoor\n",
+      "Enter Person Age  23\n",
+      "Enter Person Shoe Size  8\n",
+      "Enter Person Name  Umar Shakoor\n",
+      "Enter Person Age  23\n",
+      "Enter Person Shoe Size  8\n",
+      "Enter Person Name  Hamza\n",
+      "Enter Person Age  22\n",
+      "Enter Person Shoe Size  7\n",
+      "Enter Person Name  Ali\n",
+      "Enter Person Age  19\n",
+      "Enter Person Shoe Size  6\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Entered Successfully\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter Name of Person Whose Data You Wanna See  Umar Shakoor\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'age': 23, 'shoe_size': 8}\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = {}\n",
+    "for _ in range(4):\n",
+    "    person = input('Enter Person Name ')\n",
+    "    age = int(input(\"Enter Person Age \"))\n",
+    "    shoe = int(input(\"Enter Person Shoe Size \"))\n",
+    "    data[person] = {\n",
+    "        'age': age,\n",
+    "        'shoe_size':shoe\n",
+    "    }\n",
+    "\n",
+    "print(\"Data Entered Successfully\")\n",
+    "person = input(\"Enter Name of Person Whose Data You Wanna See \")\n",
+    "print(data[person])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0a9ea77-be73-4497-9916-a1f7dec5595e",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Medium</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>103.</strong> Modify program 102 so that it displays the names and ages\n",
+    "        of all the people, but does not show their shoe sizes.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "066dbd67-f61b-4d4a-9702-0b7d977c3eab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Person          Age  \n",
+      "--------------------\n",
+      "Mansoor         23   \n",
+      "Umar Shakoor    23   \n",
+      "Hamza           22   \n",
+      "Ali             19   \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{'Person':<15} {'Age':<5}\")\n",
+    "print(\"-\" * 20)\n",
+    "\n",
+    "for person in data:\n",
+    "    print(f\"{person:<15} {data[person]['age']:<5}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "971cca43-1ac5-4738-85e7-36fafdb86346",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
