--- a/Python_by_Example__Learning_to_Pro.ipynb
+++ b/Python_by_Example__Learning_to_Pro.ipynb
@@ -5590,7 +5590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "b38433ca-2608-4b0e-91f8-33355941c02b",
    "metadata": {},
    "outputs": [
@@ -5824,9 +5824,90 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6e691719-56ba-4d94-8187-e8d38143fa48",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#111827; padding:16px; border-radius:10px;\">\n",
+    "    <p style=\"color:#fb923c; margin:0 0 6px 0;\"><strong>Difficulty:</strong> Medium–Hard</p>\n",
+    "    <p style=\"color:#e5e7eb; margin:0;\">\n",
+    "        <strong>104.</strong> After entering the four names, ages, and shoe sizes,\n",
+    "        ask the user to type the name of the person they want to remove.\n",
+    "        Delete that person’s data and display the remaining records,\n",
+    "        each on a separate line.\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9134d007-25be-42d0-ac2a-36b64e494163",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter Person Name  Mansoor\n",
+      "Enter Person Age  23\n",
+      "Enter Person Shoe Size  7\n",
+      "Enter Person Name  Umar\n",
+      "Enter Person Age  23\n",
+      "Enter Person Shoe Size  5\n",
+      "Enter Person Name  Ali\n",
+      "Enter Person Age  22\n",
+      "Enter Person Shoe Size  8\n",
+      "Enter Person Name  Kashif\n",
+      "Enter Person Age  26\n",
+      "Enter Person Shoe Size  7\n",
+      "Enter name of person you wanna remove  Ali\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Remaining Persons are \n",
+      "Mansoor : {'age': 23, 'shoe_size': 7}\n",
+      "Umar : {'age': 23, 'shoe_size': 5}\n",
+      "Kashif : {'age': 26, 'shoe_size': 7}\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = {}\n",
+    "for _ in range(4):\n",
+    "    person = input('Enter Person Name ')\n",
+    "    age = int(input(\"Enter Person Age \"))\n",
+    "    shoe = int(input(\"Enter Person Shoe Size \"))\n",
+    "    data[person] = {\n",
+    "        'age': age,\n",
+    "        'shoe_size':shoe\n",
+    "    }\n",
+    "\n",
+    "name = input(\"Enter name of person you wanna remove \")\n",
+    "del data[name]\n",
+    "\n",
+    "print(\"Remaining Persons are \")\n",
+    "for person in data:\n",
+    "    print(f'{person} : {data[person]}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68f1646d-f403-4496-9652-43e762859726",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:black; padding:14px; border-radius:10px; text-align:center; border:5px solid green;\">\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "971cca43-1ac5-4738-85e7-36fafdb86346",
+   "id": "b102e949-9c7c-49b9-8e88-82c0b72f293e",
    "metadata": {},
    "outputs": [],
    "source": []
